--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'org.glassfish:javax.json:1.1.4'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
