--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,17 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <activity
+            android:name="ca.unb.voiaj.MapsActivity">
+        </activity>
+        <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAmTIQ7Pljct5SqiAl4b5EPqqFCQ46K6HY" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name="ca.unb.voiaj.MainActivity"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,6 +46,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
