--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,9 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    dataBinding{
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -40,6 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'org.glassfish:javax.json:1.1.4'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Room implementations:
     // Room Components
